--- a/registration/templates/registration/home.html
+++ b/registration/templates/registration/home.html
@@ -13,6 +13,7 @@
             {% if user.is_authenticated %}
                 <a class="btn btn-primary btn-lg"
                    href="{% url 'logout' %}"
+                   method="post"
                    role="button">Logout</a>
             {% else %}
                 <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
