--- a/registration/templates/registration/warning_page.html
+++ b/registration/templates/registration/warning_page.html
@@ -34,7 +34,7 @@
                     <div class="navbar-nav ml-auto">
                         {% if user.is_authenticated %}
                             <a href="{% url 'registration-profile' %}" class="nav-item nav-link">Profile</a>
-                            <a href="{% url 'logout' %}" class="nav-item nav-link">Logout</a>
+                            <a href="{% url 'logout' %}" method="post" class="nav-item nav-link">Logout</a>
                         {% else %}
                             <a href="{% url 'login' %}" class="nav-item nav-link">Sign in</a>
                         {% endif %}
